--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,30 +1,33 @@
 .App {
+    display: flex;
+    justify-content: center;
     text-align: center;
+    position: absolute;
   }
 .header{
-    display: grid;
+    /* display: grid; */
     padding-top: 30px;
     margin-left: 20px;
 }
 .bg{
-    
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: center;
     width: 1080px;
     height: 2340px;
     background-color: #fffdda;
+    margin-left: 200px;
   }
 
 .txt{
+    justify-content: center;
     margin-top: 60px;
-    width: 300px;
-    height: 32px;
+    width: 600px;
+    height: 50px;
     padding-left: 37px;
     border: none;
     border-radius: 5px;
     font-family: "Poppins", cursive;
-    font-size: 10px;
+    font-size: 17px;
     color:rgb(189, 189, 189)
     
 }
@@ -33,12 +36,12 @@
 }
 
 .busClick{
-    margin-top: 645px;
+    margin-top: 2000px;
     border: #0032C8 solid;
     border-radius: 15px;
     background-color: #0032C8;
-    width: 392px;
-    height: 65px;
+    width: 1080px;
+    height: 250px;
     margin-left: -19px;
 }
 
