--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -15,7 +15,7 @@
     width: 1080px;
     height: 2340px;
     background-color: #fffdda;
-    margin-left: 200px;
+    /* margin-left: 200px; */
   }
 
 .txt{
