--- a/src/Pages/Paid.css
+++ b/src/Pages/Paid.css
@@ -10,26 +10,27 @@
     
     margin-left: auto;
     margin-right: auto;
-    width: 390px;
-    height: 935px;
+    width: 1080px;
+    height: 2340px;
     background-color: aliceblue;
     border-radius: 30px;
+    margin-top: 100px;
     
 }
 
 .body {
     margin-left: auto;
     margin-right: auto;
-    width: 390px;
-    height: 70px;
+    width: 1080px;
+    height: 200px;
     /* margin-top: 100px; */
     background-color: #0032C8;
     padding-top: 40px;
 }
 
 .howtopay {
-    /* margin-top: 10px; */
-    margin-right: 65px;
+    
+    margin-right: 360px;
     font-size: 25px;
     font-family: "Poppins", cursive;
     color: rgb(0, 0, 0);
@@ -51,9 +52,9 @@
     background-color: #000000;
 }
 .goback{
-    margin-right: 65px;
-    width: 20px;
-    height: 10px;
+    margin-right: 300px;
+    width: 60px;
+    height: 30px;
 }
 .cancle{
     font-size: 15px;
