--- a/src/Pages/PaidSuccess.css
+++ b/src/Pages/PaidSuccess.css
@@ -14,7 +14,7 @@
 }
 
 .body {
-    margin-left: auto;
+    margin-left: 2000px;
     margin-right: auto;
     width: 1080px;
     height: 200px;
@@ -25,7 +25,7 @@
 
 .howtopay {
     
-    margin-right: 180px;
+    
     font-size: 70px;
     font-family: "Poppins", cursive;
     color: rgb(0, 0, 0);
@@ -41,14 +41,14 @@
     margin-top: 500px;
     width: 200px;
     height: 200px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 2450px;
 }
 .pay{
     margin-top: 50px;
     font-size: 60px;
     font-family: "Poppins", cursive;
     color: rgb(0, 0, 0);
+    margin-left: 190px;
 }
 
 .App {
