--- a/src/Pages/PaidSuccess.css
+++ b/src/Pages/PaidSuccess.css
@@ -46,8 +46,7 @@
     width: 200px;
     height: 200px;
     margin-left: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 2450px
 }
 .pay{
     margin-top: 50px;
