--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -8,22 +8,26 @@
     /* display: grid; */
     padding-top: 30px;
     margin-left: 20px;
+    position: fixed;
 }
 .bg{
+    position: absolute;
     display: block;
     justify-content: center;
     width: 1080px;
-    height: 1600px;
+    height: 1700px;
     background-color: #fffdda;
-    /* margin-left: 200px; */
+    margin-left: 1070px;
   }
 
 .txt{
+    position: relative;
     justify-content: center;
     margin-top: 60px;
-    width: 740px;
+    width: 820px;
     height: 80px;
-    padding-left: 37px;
+    margin-right: 100px;
+    padding-left: 35px;
     border: none;
     border-radius: 5px;
     font-family: "Poppins", cursive;
@@ -36,54 +40,65 @@
 }
 
 .busClick{
-    margin-top: 1150px;
+    position: relative;
+    margin-top: 1230px;
     border: #0032C8 solid;
     border-radius: 15px;
     background-color: #0032C8;
     width: 1080px;
-    height: 250px;
+    height: 190px;
     margin-left: -19px;
 }
 
 .bus1{
+    position: relative;
     width: 40px;
     height: 40px;
-    margin-right: 950px;
-    margin-bottom: 120px;
+    margin-left: 30px;
+    margin-bottom: 70px;
 }
 .bus{
-    width: 30px;
-    height: 30px;
-    margin-right: 1000px;
-    margin-top: 25px;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    margin-left: 30px;
+}
+
+.bus3{
+    padding-top: 40px;
 }
 
 .showBus{
-    margin-top: 1150px;
+    position: relative;
+    margin-top: 690px;
     border: #0032C8 ;
     border-radius: 15px;
-    background-color: #1a52fa;
+    background-color: #0635c5;
     width: 1080px;
-    height: 250px;
+    height: 600px;
     margin-left: -19px;
 }
 .listOfBus{
+    position: relative;
+    overflow: auto;
     display: block;
     text-align: left;
-    margin-top: 15px;
+    margin-top: 80px;
     background-color: #182FA5;
     width: 1080px;
-    height: 200px;
+    height: 630px;
     margin-left: 0px;
 }
 .whiteLine{
+    position: relative;
     width: 1080px;
-    height:10px;
+    height:4px;
     background-color: rgb(255, 255, 255);
-    margin-top: 50px;
+    margin-top: 89px;
     margin-left:-18px ;
 }
 .number{
+    position: relative;
     margin-left: 20px;
     margin-top: 10px;
     font-family: "Poppins", cursive;
@@ -91,6 +106,7 @@
     color:rgb(255, 255, 255)
 }
 .busToBus{
+    position: relative;
     margin-left: 20px;
     margin-top: 5px;
     font-family: "Poppins", cursive;
@@ -113,10 +129,12 @@
     position: absolute;
 }
 .bbb{
+    position: relative;
     background: none;
     border: none;
     display: flex;
     justify-content: left;
+    margin-left: 63px;
     
 }
 .bt{
@@ -124,16 +142,17 @@
     height: 90px;
 }
 .bbb1{
+    position: relative;
     background: none;
     border: none;
-    margin-left: -210px;
-    margin-top: 17px;
+    margin-left: 0px;
+    margin-top: 40px;
     width: 100px;
     height: 100px;
 }
 .popup-menu{
-    background-color: aliceblue;
-    width: 460px;
+    background-color: rgb(255, 255, 255);
+    width: 550px;
     height: 1780px;
     margin-top: -120px;
     padding-top: 20px;
@@ -142,35 +161,34 @@
     position: absolute;
 }
 .pic{
-    display: block;
-    justify-content: left;
+    display: flex;
+    justify-content: space-between;
 }
-.back{
+/* .back{
     margin-left: 10px ;
     height: 48px;
     width: 48px;
     background: none;
     border: none;
-}
+} */
 .man{
-    margin-left: 100px;
-    margin-top: -70px;
+    margin-right: 50px;
+    margin-top: 40px;
     width: 100px;
     height: 120px;
 }
 .login{
     background-color: #0032C8;
-    width: 300px;
-    height: 60px;
-    border-radius: 10px;
-    margin-left: -70px;
+    width: 450px;
+    height: 100px;
+    border-radius: 20px;
     margin-top: 140px;
-    font-size: 30px;
+    font-size: 40px;
     font-family: "Poppins", cursive;
     color: rgb(255, 255, 255);
 }
 @font-face {
     font-family: 'Poppins';
-    src: local('Poppins'), url(/public/Poppins/Poppins-Black.ttf) format('truetype');
+    src: local('Poppins'), url(/public/Poppins/Poppins-BlackItalic.ttf) format('truetype');
 }
 
