--- a/src/pages/Popup.module.css
+++ b/src/pages/Popup.module.css
@@ -22,7 +22,7 @@
     z-index: 1;
     position: absolute;
 }
-.popup-menu{
+.popup_menu{
     background-color: aliceblue;
     width: 300px;
     height: 924px;
