--- a/src/Pages/Destination3.module.css
+++ b/src/Pages/Destination3.module.css
@@ -52,6 +52,7 @@
     height: 50px;
 }
 .position{
+    padding-left: 10px;
     margin-top: 70px;
     margin-left: 10px;
     width: 800px;
@@ -71,6 +72,7 @@
     height: 50px;
 }
 .destination{
+    padding-left: 10px;
     margin-top: 40px;
     margin-left: 10px;
     width: 800px;
@@ -115,27 +117,31 @@
     border: 1px solid #B0B0B0;
     width: 800px;
     height: 80px;
-    margin-left: -100px;
+    margin-left: -40px;
     
 }
-.close{
-    margin-left: 752px;
+.Vector{
+    margin-left: 52px;
     width: 20px;
     height: 20px;
     margin-top: 5px;
 
 }
-.c{
+.v{
+    margin-top: 5px;
+    margin-bottom: -45px;
+    margin-left: 730px;
     width: 20px;
     height: 20px;
 }
 
-.starf{
+.carf{
+    margin-left: 10px;
     margin-right: 10px;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 }
-.star{
+.car{
     display: flex;
     margin-top: -15px;
     width: 50px;
@@ -152,7 +158,7 @@
     border: 1px solid #B0B0B0;
     width: 800px;
     height: 80px;
-    margin-left: -154px;
+    margin-left: -168px;
     
 }
 .lastsearchpath{
@@ -160,7 +166,7 @@
     font-size: 30px;
     font-family: "Poppins", cursive;
     color: #000000;
-    margin-left: -450px;
+    margin-left: -510px;
 }
 .savepath{
     margin-top: -53px;
