--- a/src/pages/Destination3.module.css
+++ b/src/pages/Destination3.module.css
@@ -13,13 +13,13 @@
 .bg {
     margin-left: auto;
     margin-right: auto;
-    width: 980px;
-    height: 1800px;
+    width: 1048px;
+    height: 1700px;
     background-color: aliceblue;
     
 }
 .pathbox{
-    width: 980px;
+    width: 1048px;
     height: 446px;
     background-color: #0032C8;
     border-radius: 20px;
@@ -166,14 +166,16 @@
     font-size: 30px;
     font-family: "Poppins", cursive;
     color: #000000;
-    margin-left: -510px;
+    margin-left: 60px;
+    text-align: left;
 }
 .savepath{
     margin-top: -53px;
     font-size: 30px;
     font-family: "Poppins", cursive;
     color: #000000;
-    margin-left: -520px;
+    margin-left: 60px;
+    text-align: left;
 }
 .box{
     display: block;
