--- a/src/pages/Destination.module.css
+++ b/src/pages/Destination.module.css
@@ -60,6 +60,7 @@
     border-radius: 10px;
     font-size: 30px;
     font-family: "Poppins", cursive;
+    padding: 15px;
 }
 .df{
     display: flex;
@@ -79,6 +80,7 @@
     border-radius: 10px;
     font-size: 30px;
     font-family: "Poppins", cursive;
+    padding: 15px;
 }
 .search{
     background-color: #0032C8;
