--- a/src/pages/Confirmotp.module.css
+++ b/src/pages/Confirmotp.module.css
@@ -11,8 +11,8 @@
     margin-left: auto;
     margin-right: auto;
     width: 1048px;
-    height: 1700px;
-    background-color: aliceblue;
+    height: 1610px;
+    background-color: white;
     border-radius: 50px;
     margin-top: 50px;
     
@@ -51,13 +51,16 @@
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 700px;
-    font-size: 30px;
+    width: auto;
+    font-size: 40px;
     font-family: "Poppins", cursive;
     color: #52575C;
 }
 .otp{
-    margin-top: 50px;
+    margin-top: 70px;
+    padding: 0 30px 0 25px;
+    width: auto;
+    height: 100px !important;
     font-size: 40px;
     font-family: "Poppins", cursive;
     color: rgb(0, 0, 0);
@@ -67,19 +70,19 @@
     
 }
 .again{
-    margin-top: 50px;
+    margin-top: 170px;
     font-size: 40px;
     font-family: "Poppins", cursive;
     color: #182FA5;
 }
 .next{
-    margin-top: 700px;
+    margin-top: 520px;
     font-size: 40px;
     font-family: "Poppins", cursive;
     color: #ffffff;
     background-color: #0032C8;
-    width: 800px;
-    height: 80px;
+    width: 900px;
+    height: 95px;
     border-radius: 50px;
     margin-left: auto;
     margin-right: auto;
