--- a/src/pages/PaidSuccess.module.css
+++ b/src/pages/PaidSuccess.module.css
@@ -1,6 +1,7 @@
 .App {
     font-family: "Poppins", cursive;
 }
+
 .App {
     text-align: center;
 }
@@ -8,9 +9,9 @@
 .bg1 {
     margin-left: auto;
     margin-right: auto;
-    width: 980px;
-    height: 1650px;
-    background-color: aliceblue;
+    width: 1048px;
+    height: 1610px;
+    background-color: white;
     border-radius: 50px;
     margin-top: 50px;
 }
@@ -18,7 +19,7 @@
 .body1 {
     margin-left: auto;
     margin-right: auto;
-   
+
     width: 1048px;
     height: 150px;
     /* margin-top: 100px; */
@@ -27,26 +28,29 @@
 }
 
 .howtopay1 {
-    margin-right: 210px;
+    margin: 0 auto 0 auto;
     font-size: 50px;
     font-family: "Poppins", cursive;
     color: rgb(0, 0, 0);
 }
 
 
-.goback1{
-    margin-right: 190px;
+.goback1 {
+    position: absolute;
+    margin-left: -450px;
     width: 50px;
     height: 50px;
 }
-.success1{
+
+.success1 {
     margin-top: 500px;
     width: 200px;
     height: 200px;
     margin-left: auto;
     margin-right: auto;
 }
-.pay1{
+
+.pay1 {
     margin-top: 50px;
     font-size: 40px;
     font-family: "Poppins", cursive;
