--- a/src/pages/Travel.module.css
+++ b/src/pages/Travel.module.css
@@ -55,24 +55,33 @@
 
 .bus1 {
     position: relative;
-    width: 300px;
-    height: 40px;
+    text-align: left;
+    width: auto;
+    height: auto;
     margin-left: 20px;
     margin-bottom: 30px;
     font-family: "Poppins", cursive;
     font-size: 45px;
-    color: rgb(255, 255, 255)
+    color: rgb(255, 255, 255);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .bus {
     position: relative;
-    width: 300px;
-    height: 40px;
-    margin-left: 20px;
+    width: 988px;
+    padding-top: 80px;
+    padding-left: 60px;
+    text-align: left;
+    height: 150px;
     /* margin-top: 30px; */
     font-family: "Poppins", cursive;
     font-size: 45px;
-    color: rgb(255, 255, 255)
+    color: rgb(255, 255, 255);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .bus3 {
@@ -121,11 +130,11 @@
 }
 
 .Popupmenu {
-  font-family: 'Poppins', cursive;
+    font-family: 'Poppins', cursive;
 }
 
 .PopupMenu {
-  text-align: center;
+    text-align: center;
 }
 
 .dp {
@@ -157,7 +166,7 @@
     position: relative;
     background: none;
     border: none;
-    margin-left: 0px;
+    margin-left: 40px;
     margin-top: 40px;
     width: 100px;
     height: 100px;
@@ -189,8 +198,8 @@
 .man {
     margin-right: 50px;
     margin-top: 40px;
-    width: 100px;
-    height: 120px;
+    width: 146px;
+    height: 170px;
 }
 
 .login {
@@ -203,6 +212,33 @@
     font-family: "Poppins", cursive;
     color: rgb(255, 255, 255);
 }
+.profile {
+    background-color: #0032C8;
+    width: 450px;
+    height: 130px;
+    border-radius: 80px;
+    margin-top: 50px;
+    font-size: 40px;
+    font-family: "Poppins", cursive;
+    color: rgb(255, 255, 255);
+}
+.userimg {
+    position: relative;
+    margin-left: 18px;
+    height: 105px;
+}
+.username {
+    font-size: 35px;
+    position: absolute;
+    margin-left: 145px;
+    margin-top: 220px;
+    width: 270px;
+    top: 100px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+}
 
 .map {
     position: static;
@@ -212,7 +248,7 @@
 
 }
 
-.upp{
+.upp {
     position: absolute;
     justify-content: center;
     background-color: #0032C8;
@@ -220,48 +256,53 @@
     width: 1080px;
     height: 200px;
     margin-top: 1510px;
-  }
-  
-  .blueBox{
+}
+
+.blueBox {
     /* display: flex; */
     position: absolute;
     justify-content: center;
     background-color: #0032C8;
     border-radius: 50px;
-    width: 1080px;
-    height: 1000px;
-    margin-top: 520px;
-  }
+    width: 1050px;
+    height: 1065px;
+    margin-top: 495px;
+    margin-left: -10px;
+}
 
 
 
-.upArrow{
+.upArrow {
     margin-top: 30px;
     margin-left: 520px;
     width: 50px;
     height: 30px;
-  }
-  
-  .showBox{
+}
+
+.showBox {
     position: absolute;
-    overflow:auto;
     background-color: #182FA5;
-    width: 1060px;
-    height: 900px;
-    margin-top: 50px;
-  }
-  
-  .cntSign{
+    width: 1048px;
+    height: 910px;
+    margin-top: 10px;
+}
+.scroll{
+    overflow: auto;
+    height: 780px;
+}
+
+.cntSign {
     position: relative;
     display: grid;
     justify-content: end;
     font-family: 'Poppins', cursive;
     font-size: 30px;
     color: rgb(255, 255, 255);
-  
-  }
-  
-  .startPoint{
+    margin-top: 40px;
+    right: 50px;
+}
+
+.startPoint {
     position: relative;
     /* display: flex;
     justify-content: space-between; */
@@ -270,55 +311,55 @@
     width: 980px;
     height: 100px;
     margin-left: 40px;
-    margin-top: 100px;
+    margin-top: 10px;
     border-radius: 17px;
     font-family: 'Poppins', cursive;
     font-size: 36px;
     color: rgb(0, 0, 0);
-  }
-  
-  .pin{
+}
+
+.pin {
     position: absolute;
     margin-top: 30px;
     margin-left: 30px;
     width: 30px;
     height: 40px;
-  }
-  
-  .st{
+}
+
+.st {
+    position: absolute;
+    margin-top: 24px;
+    right: 30px;
+    text-align: right;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 600px;
+
+}
+
+.st1 {
     position: absolute;
     margin-top: 24px;
     margin-left: 120px;
-  
-  }
-  .st1{
-    position: absolute;
-    margin-top: 24px;
-    margin-left: 120px;
-  
-  }
-  .cntSign{
-    position: absolute;
-    margin-top: 36px;
-    margin-left: 900px;
-    font-family: 'Poppins', cursive;
-    font-size: 36px;
-    color: rgb(255, 255, 255);
-  }
-  
-  .line{
+
+}
+
+
+.line {
     position: relative;
     margin-top: 40px;
     padding-top: 0;
     margin-left: 540px;
     height: 80px;
-  }
-  .straightLine{
+}
+
+.straightLine {
     display: flex;
-  
-  }
-  
-  .countSign{
+
+}
+
+.countSign {
     position: relative;
     height: 30px;
     width: 100px;
@@ -326,30 +367,31 @@
     font-family: 'Poppins', cursive;
     font-size: 25px;
     color: rgb(255, 255, 255);
-  }
-  
-  .cntTime{
-    position: relative;
-    margin-top: 30px;
-    margin-right: 50px;
-    font-family: 'Poppins', cursive;
-    font-size: 30px;
-    color: rgb(0, 0, 0);
-  }
-  .cntTime1{
-    position: relative;
-    margin-top: 30px;
-    margin-right: 50px;
-    font-family: 'Poppins', cursive;
-    font-size: 30px;
-    color: rgb(0, 0, 0);
-  }
+}
 
-  .signBox{
+.cntTime {
+    position: relative;
+    margin-top: 30px;
+    margin-right: 50px;
+    font-family: 'Poppins', cursive;
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+}
+
+.cntTime1 {
+    position: relative;
+    margin-top: 30px;
+    margin-right: 50px;
+    font-family: 'Poppins', cursive;
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+}
+
+.signBox {
     position: relative;
     display: flex;
     justify-content: space-between;
-    
+
     background-color: rgb(251, 251, 251);
     width: 980px;
     height: 100px;
@@ -359,13 +401,13 @@
     font-family: 'Poppins', cursive;
     font-size: 36px;
     color: rgb(0, 0, 0);
-  }
+}
 
-  .signBox1{
+.signBox1 {
     position: relative;
     display: flex;
     justify-content: space-between;
-    
+
     background-color: #CBD6FF;
     width: 980px;
     height: 100px;
@@ -375,33 +417,30 @@
     font-family: 'Poppins', cursive;
     font-size: 36px;
     color: rgb(0, 0, 0);
-  }
+}
 
-  .sai{
+.sai {
     margin-top: 25px;
     margin-left: 10px;
-  }
-  .sai1{
-    margin-top: 25px;
-    margin-left: 10px;
-  }
-  
-  
-  .btn{
-    position: absolute;
-    border: #ffffff solid;
-    background-color: rgb(251, 251, 251);
+    text-align: left;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 340px;
+}
+
+
+
+.btn {
+    position: relative;
     width: 400px;
     height: 100px;
     border-radius: 17px;
-    margin-top: 60px;
-    margin-left: -190px;
-
-
+    margin-top: 800px;
     font-family: 'Poppins', cursive;
     font-size: 36px;
-    color: rgb(0, 0, 0);
-  }
+    color: white;
+}
 
 @font-face {
     font-family: 'Poppins';
